add_library(forcing)
add_library(NGen::forcing ALIAS forcing)


find_package(Threads REQUIRED)

target_include_directories(forcing PUBLIC
        ${NGEN_INC_DIR}
        ${PROJECT_SOURCE_DIR}/include
        ${PROJECT_SOURCE_DIR}/include/netcdf
        ${PROJECT_SOURCE_DIR}/include/core
        ${PROJECT_SOURCE_DIR}/include/core/mediator
        ${PROJECT_SOURCE_DIR}/include/utilities
        ${PROJECT_SOURCE_DIR}/include/forcing
        ${CMAKE_SOURCE_DIR}/include
        )

target_link_libraries(forcing PUBLIC
        NGen::config_header
        NGen::core
        Boost::boost                # Headers-only Boost
        NGen::config_header
        Threads::Threads
)

if(USE_EWTS)
    target_link_libraries(forcing PUBLIC NGen::ewts)
endif()

target_sources(forcing PRIVATE "${CMAKE_CURRENT_LIST_DIR}/NullForcingProvider.cpp")

if(NGEN_WITH_NETCDF)
    target_sources(forcing PRIVATE "${CMAKE_CURRENT_LIST_DIR}/NetCDFPerFeatureDataProvider.cpp")
    target_link_libraries(forcing PUBLIC NetCDFManager)
endif()

if(NGEN_WITH_PYTHON)
    target_sources(forcing
      PRIVATE
        "${CMAKE_CURRENT_LIST_DIR}/ForcingsEngineDataProvider.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/ForcingsEngineLumpedDataProvider.cpp"
    )
    target_link_libraries(forcing PUBLIC NGen::ngen_bmi)
endif()

#target_compile_definitions(forcing PUBLIC $<$<BOOL:${NGEN_WITH_NETCDF}>:NGEN_WITH_NETCDF>)
